--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,111 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=kanit&display=swap");
+
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #000;
+  overflow-x: hidden;
+  background-color: #FFFF;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  padding: 0 !important;
+  max-width: 100% !important;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+section {
+  padding: 40px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.banner-illustration-image {
+  width: 100%;
+  height: 500px;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 0em 0em;
+  background-image: url("/src//assets/images//ilustracoes/meghan-holmes-buWcS7G1_28-unsplash.jpg");
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.plan-item {
+  box-shadow: 4px 2px 0px 8px rgba(235,186,14,1);
+  -webkit-box-shadow: 4px 2px 0px 8px rgba(235,186,14,1);
+  -moz-box-shadow: 4px 2px 0px 8px rgba(235,186,14,1);
 }
 
-@media (prefers-color-scheme: light) {
+.leaflet-container {
+  width: 100%;
+  height: 500px;
+}
+
+@media screen and (max-width: 1200px) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    font-size: 80%;
   }
-  a:hover {
-    color: #747bff;
+
+  .banner-image {
+    min-height: 24em;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .nav-menu-button {
+    display: block;
+  }
+  .nav-menu {
+    display: flex !important;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 4em;
+    z-index: 1;
+    width: 100%;
+    text-align: right;
+    background-color: black;
+  }
+
+  .nav-menu a {
+    padding-top: 0.5em;
+  }
+
+  .nav-menu a:hover {
+    color: #EBBA0E !important;
+  }
+
+  .banner-illustration-image {
+    background-position: -34em 7em;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  section {
+    padding: 20px;
+  }
+  .nav-menu {
+    top: 4.2em;
+  }
+  .about-illustration {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 976px) {
+  .nav-menu {
+    top: 5em;
+  }
+  section {
+    padding: 10px;
+    font-size: 85%;
+  }
+  .section-plans {
+    font-size: 0.6em;
+  }
+
+  .plan-item {
+    box-shadow: 1px 1px 0px 4px rgba(235,186,14,1);
+    -webkit-box-shadow: 1px 1px 0px 4px rgba(235,186,14,1);
+    -moz-box-shadow: 1px 1px 0px 4px rgba(235,186,14,1);
   }
 }
